@startuml

class NameSorterApplication{

    String inputPath
    String outputPath
    ArrayList<String> nameList

    + readContent(inputPath)
    + sortContent(nameList)
    + numberOfNames(nameList)
}

NameSorterApplication ..|> ReadFileContent
NameSorterApplication ..|> WriteToFile

class ReadFileContent{
    + readContent()
}

class WriteToFile{
    + numberOfNames()
    + sortContent()
    + writeToFile()
}
@enduml